apps/pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
  hostnames:
    - pihole.umbos.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      forwardTo:
        - serviceName: pihole
          port: 80
  tls:
    mode: Terminate
    certificateRefs:
      - name: pihole
        kind: Secret
