apps/pihole/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - pihole.umbos.net
  rules:
    - backendRefs:
        - name: pihole-web
          namespace: pihole
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: traefik-to-pihole
  namespace: pihole
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: pihole-web
